--- a/admin-login.html
+++ b/admin-login.html
@@ -10,178 +10,273 @@
     <style>
         :root {
             --primary: #0056b3;
+            --primary-dark: #004494;
             --danger: #dc3545;
+            --danger-dark: #bd2130;
             --bg-body: #f0f2f5;
             --white: #ffffff;
             --text-main: #2d3436;
+            --text-muted: #636e72;
             --shadow: 0 20px 50px rgba(0,0,0,0.1);
         }
 
-        * { box-sizing: border-box; margin: 0; padding: 0; }
+        * { 
+            box-sizing: border-box; 
+            margin: 0; 
+            padding: 0; 
+        }
 
         body {
             font-family: 'Kodchasan', sans-serif;
-            background: linear-gradient(135deg, #f0f2f5 0%, #c3cfe2 100%);
-            height: 100vh;
+            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+            min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
-            color: var(--text-main);
+            padding: 20px;
         }
 
-        .login-container {
+        /* -----------------------------------------------------------
+            LOGIN CARD DESIGN
+        ----------------------------------------------------------- */
+        .login-wrapper {
             background: var(--white);
             width: 100%;
-            max-width: 400px;
-            padding: 2.5rem;
-            border-radius: 30px;
+            max-width: 450px;
+            border-radius: 35px;
             box-shadow: var(--shadow);
-            text-align: center;
+            overflow: hidden;
+            position: relative;
         }
 
+        /* แถบสีด้านบนเพื่อความเป็นระเบียบ */
+        .login-accent-bar {
+            height: 10px;
+            background: linear-gradient(90deg, var(--primary), var(--danger));
+        }
+
+        .login-body {
+            padding: 3rem 2.5rem;
+        }
+
+        /* Header Section */
         .login-header {
-            margin-bottom: 2rem;
+            text-align: center;
+            margin-bottom: 2.5rem;
         }
 
-        .login-header i {
-            font-size: 3.5rem;
+        .admin-icon-container {
+            width: 90px;
+            height: 90px;
+            background: #fff5f5;
             color: var(--danger);
-            margin-bottom: 1rem;
+            border-radius: 25px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 2.5rem;
+            margin: 0 auto 1.5rem;
+            border: 2px solid #ffc9c9;
+            box-shadow: 0 10px 20px rgba(220, 53, 69, 0.1);
         }
 
         .login-header h1 {
-            font-size: 1.5rem;
+            font-size: 1.6rem;
             color: var(--primary);
             font-weight: 700;
+            margin-bottom: 0.5rem;
         }
 
         .login-header p {
-            color: var(--secondary);
-            font-size: 0.9rem;
-            margin-top: 5px;
+            color: var(--text-muted);
+            font-size: 0.95rem;
         }
 
+        /* Form Styling */
         .form-group {
             margin-bottom: 1.5rem;
-            text-align: left;
         }
 
         .form-group label {
             display: block;
             font-size: 0.9rem;
             font-weight: 600;
-            margin-bottom: 8px;
-            color: #555;
+            margin-bottom: 10px;
+            color: #444;
+            padding-left: 5px;
         }
 
-        .input-wrapper {
+        .input-group {
             position: relative;
         }
 
-        .input-wrapper i {
+        .input-group i {
             position: absolute;
-            left: 15px;
+            left: 18px;
             top: 50%;
             transform: translateY(-50%);
-            color: #aaa;
-        }
-
-        .input-wrapper input {
-            width: 100%;
-            padding: 12px 15px 12px 45px;
-            border-radius: 12px;
-            border: 2px solid #eee;
-            font-family: 'Kodchasan';
+            color: #adb5bd;
             transition: 0.3s;
-            outline: none;
         }
 
-        .input-wrapper input:focus {
+        .input-group input {
+            width: 100%;
+            padding: 14px 18px 14px 50px;
+            border-radius: 15px;
+            border: 2px solid #edf2f7;
+            background: #f8f9fc;
+            font-family: 'Kodchasan';
+            font-size: 1rem;
+            outline: none;
+            transition: all 0.3s;
+        }
+
+        .input-group input:focus {
+            background: #fff;
             border-color: var(--danger);
             box-shadow: 0 0 0 4px rgba(220, 53, 69, 0.1);
         }
 
-        .btn-login {
+        .input-group input:focus + i {
+            color: var(--danger);
+        }
+
+        /* Options Row (Remember Me / Forgot) */
+        .form-options {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 2rem;
+            font-size: 0.85rem;
+        }
+
+        .remember-me {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            cursor: pointer;
+            color: var(--text-muted);
+        }
+
+        .remember-me input {
+            width: 16px;
+            height: 16px;
+            accent-color: var(--danger);
+        }
+
+        .forgot-pass {
+            color: var(--primary);
+            text-decoration: none;
+            font-weight: 600;
+        }
+
+        /* Submit Button */
+        .btn-submit {
             width: 100%;
-            background-color: var(--danger);
+            background: var(--danger);
             color: white;
-            padding: 12px;
+            padding: 15px;
             border: none;
-            border-radius: 12px;
-            font-size: 1rem;
+            border-radius: 15px;
+            font-size: 1.1rem;
             font-weight: 700;
             cursor: pointer;
-            transition: 0.3s;
-            margin-top: 1rem;
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 10px;
+            gap: 12px;
+            transition: all 0.3s;
+            box-shadow: 0 10px 20px rgba(220, 53, 69, 0.2);
         }
 
-        .btn-login:hover {
-            background-color: #bd2130;
+        .btn-submit:hover {
+            background: var(--danger-dark);
             transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(220, 53, 69, 0.3);
+            box-shadow: 0 15px 30px rgba(220, 53, 69, 0.3);
         }
 
-        .back-home {
-            display: inline-block;
+        /* Footer Link */
+        .login-footer {
+            text-align: center;
             margin-top: 2rem;
-            text-decoration: none;
-            color: var(--secondary);
-            font-size: 0.85rem;
-            transition: 0.3s;
         }
 
-        .back-home:hover {
+        .back-link {
+            text-decoration: none;
+            color: var(--text-muted);
+            font-size: 0.9rem;
+            font-weight: 500;
+            transition: 0.3s;
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .back-link:hover {
             color: var(--primary);
         }
 
-        /* สำหรับหน้าจอเล็ก */
-        @media (max-width: 480px) {
-            .login-container {
-                margin: 20px;
-                padding: 1.5rem;
-            }
+        /* Animation */
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        .login-wrapper {
+            animation: fadeIn 0.6s ease-out;
         }
     </style>
 </head>
 <body>
 
-<div class="login-container">
-    <div class="login-header">
-        <i class="fas fa-user-shield"></i>
-        <h1>Admin Login</h1>
-        <p>ระบบจัดการงานทะเบียนและวัดผล</p>
+    <div class="login-wrapper">
+        <div class="login-accent-bar"></div>
+        
+        <div class="login-body">
+            <div class="login-header">
+                <div class="admin-icon-container">
+                    <i class="fas fa-user-shield"></i>
+                </div>
+                <h1>Admin Access</h1>
+                <p>ระบบจัดการงานทะเบียนโรงเรียนบรรหารฯ 1</p>
+            </div>
+
+            <form action="#">
+                <div class="form-group">
+                    <label>ชื่อผู้ใช้งาน (Username)</label>
+                    <div class="input-group">
+                        <i class="fas fa-user-circle"></i>
+                        <input type="text" placeholder="ระบุ Username เจ้าหน้าที่" required autofocus>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label>รหัสผ่าน (Password)</label>
+                    <div class="input-group">
+                        <i class="fas fa-key"></i>
+                        <input type="password" placeholder="ระบุ Password" required>
+                    </div>
+                </div>
+
+                <div class="form-options">
+                    <label class="remember-me">
+                        <input type="checkbox"> จดจำการเข้าระบบ
+                    </label>
+                    <a href="#" class="forgot-pass">ลืมรหัสผ่าน?</a>
+                </div>
+
+                <button type="submit" class="btn-submit">
+                    เข้าสู่ระบบจัดการ <i class="fas fa-arrow-right-to-bracket"></i>
+                </button>
+            </form>
+
+            <div class="login-footer">
+                <a href="index.html" class="back-link">
+                    <i class="fas fa-chevron-left"></i> กลับสู่หน้าหลัก
+                </a>
+            </div>
+        </div>
     </div>
-
-    <form action="#">
-        <div class="form-group">
-            <label>ชื่อผู้ใช้งาน (Username)</label>
-            <div class="input-wrapper">
-                <i class="fas fa-user"></i>
-                <input type="text" placeholder="กรอกชื่อผู้ใช้งาน" required>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label>รหัสผ่าน (Password)</label>
-            <div class="input-wrapper">
-                <i class="fas fa-lock"></i>
-                <input type="password" placeholder="กรอกรหัสผ่าน" required>
-            </div>
-        </div>
-
-        <button type="submit" class="btn-login">
-            เข้าสู่ระบบจัดการ <i class="fas fa-sign-in-alt"></i>
-        </button>
-    </form>
-
-    <a href="index.html" class="back-home">
-        <i class="fas fa-arrow-left"></i> กลับสู่หน้าหลักสำหรับบุคคลทั่วไป
-    </a>
-</div>
 
 </body>
 </html>
