--- a/admin-login.html
+++ b/admin-login.html
@@ -10,269 +10,234 @@
     <style>
         :root {
             --primary: #0056b3;
-            --primary-dark: #004494;
             --danger: #dc3545;
             --danger-dark: #bd2130;
-            --bg-body: #f0f2f5;
             --white: #ffffff;
             --text-main: #2d3436;
             --text-muted: #636e72;
-            --shadow: 0 20px 50px rgba(0,0,0,0.1);
         }
 
-        * { 
-            box-sizing: border-box; 
-            margin: 0; 
-            padding: 0; 
-        }
+        * { box-sizing: border-box; margin: 0; padding: 0; }
 
         body {
             font-family: 'Kodchasan', sans-serif;
-            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-            min-height: 100vh;
+            background-color: var(--white);
+            height: 100vh;
+            overflow: hidden; /* ป้องกันการเลื่อนหน้าจอ */
+        }
+
+        .full-page-login {
             display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 20px;
+            height: 100vh;
+            width: 100%;
         }
 
         /* -----------------------------------------------------------
-            LOGIN CARD DESIGN
+            LEFT SIDE - BRANDING & VISUAL
         ----------------------------------------------------------- */
-        .login-wrapper {
-            background: var(--white);
-            width: 100%;
-            max-width: 450px;
-            border-radius: 35px;
-            box-shadow: var(--shadow);
-            overflow: hidden;
+        .login-side-visual {
+            flex: 1.2; /* พื้นที่กว้างกว่าฝั่งฟอร์มเล็กน้อย */
+            background: linear-gradient(135deg, rgba(0, 86, 179, 0.9) 0%, rgba(220, 53, 69, 0.8) 100%),
+                        url('https://images.unsplash.com/photo-1497366216548-37526070297c?auto=format&fit=crop&q=80');
+            background-size: cover;
+            background-position: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            padding: 40px;
+            text-align: center;
             position: relative;
         }
 
-        /* แถบสีด้านบนเพื่อความเป็นระเบียบ */
-        .login-accent-bar {
-            height: 10px;
-            background: linear-gradient(90deg, var(--primary), var(--danger));
+        .login-side-visual::after {
+            content: "";
+            position: absolute;
+            top: 0; left: 0; right: 0; bottom: 0;
+            background: rgba(0,0,0,0.2);
         }
 
-        .login-body {
-            padding: 3rem 2.5rem;
+        .visual-content {
+            position: relative;
+            z-index: 2;
         }
 
-        /* Header Section */
-        .login-header {
-            text-align: center;
-            margin-bottom: 2.5rem;
+        .visual-content i {
+            font-size: 5rem;
+            margin-bottom: 20px;
+            text-shadow: 0 10px 20px rgba(0,0,0,0.2);
         }
 
-        .admin-icon-container {
-            width: 90px;
-            height: 90px;
-            background: #fff5f5;
-            color: var(--danger);
-            border-radius: 25px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+        .visual-content h2 {
             font-size: 2.5rem;
-            margin: 0 auto 1.5rem;
-            border: 2px solid #ffc9c9;
-            box-shadow: 0 10px 20px rgba(220, 53, 69, 0.1);
+            font-weight: 700;
+            margin-bottom: 10px;
         }
 
-        .login-header h1 {
-            font-size: 1.6rem;
+        .visual-content p {
+            font-size: 1.1rem;
+            opacity: 0.9;
+            max-width: 500px;
+        }
+
+        /* -----------------------------------------------------------
+            RIGHT SIDE - LOGIN FORM
+        ----------------------------------------------------------- */
+        .login-side-form {
+            flex: 0.8;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding: 0 10%;
+            background-color: var(--white);
+        }
+
+        .form-header {
+            margin-bottom: 40px;
+        }
+
+        .form-header h1 {
+            font-size: 2rem;
             color: var(--primary);
             font-weight: 700;
-            margin-bottom: 0.5rem;
+            margin-bottom: 10px;
         }
 
-        .login-header p {
+        .form-header p {
             color: var(--text-muted);
-            font-size: 0.95rem;
+            font-size: 1rem;
         }
 
-        /* Form Styling */
         .form-group {
-            margin-bottom: 1.5rem;
+            margin-bottom: 25px;
         }
 
         .form-group label {
             display: block;
-            font-size: 0.9rem;
+            margin-bottom: 8px;
             font-weight: 600;
-            margin-bottom: 10px;
             color: #444;
-            padding-left: 5px;
         }
 
-        .input-group {
+        .input-box {
             position: relative;
         }
 
-        .input-group i {
+        .input-box i {
             position: absolute;
-            left: 18px;
+            left: 15px;
             top: 50%;
             transform: translateY(-50%);
             color: #adb5bd;
-            transition: 0.3s;
         }
 
-        .input-group input {
+        .input-box input {
             width: 100%;
-            padding: 14px 18px 14px 50px;
-            border-radius: 15px;
-            border: 2px solid #edf2f7;
-            background: #f8f9fc;
+            padding: 15px 15px 15px 45px;
+            border: 2px solid #eee;
+            border-radius: 12px;
             font-family: 'Kodchasan';
             font-size: 1rem;
-            outline: none;
-            transition: all 0.3s;
+            transition: 0.3s;
+            background: #fdfdfd;
         }
 
-        .input-group input:focus {
-            background: #fff;
+        .input-box input:focus {
             border-color: var(--danger);
+            outline: none;
+            background: #fff;
             box-shadow: 0 0 0 4px rgba(220, 53, 69, 0.1);
         }
 
-        .input-group input:focus + i {
-            color: var(--danger);
-        }
-
-        /* Options Row (Remember Me / Forgot) */
-        .form-options {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 2rem;
-            font-size: 0.85rem;
-        }
-
-        .remember-me {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            cursor: pointer;
-            color: var(--text-muted);
-        }
-
-        .remember-me input {
-            width: 16px;
-            height: 16px;
-            accent-color: var(--danger);
-        }
-
-        .forgot-pass {
-            color: var(--primary);
-            text-decoration: none;
-            font-weight: 600;
-        }
-
-        /* Submit Button */
-        .btn-submit {
+        .btn-admin-login {
             width: 100%;
             background: var(--danger);
             color: white;
-            padding: 15px;
+            padding: 18px;
             border: none;
-            border-radius: 15px;
+            border-radius: 12px;
             font-size: 1.1rem;
             font-weight: 700;
             cursor: pointer;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 12px;
-            transition: all 0.3s;
+            transition: 0.3s;
+            margin-top: 10px;
+        }
+
+        .btn-admin-login:hover {
+            background: var(--danger-dark);
+            transform: translateY(-2px);
             box-shadow: 0 10px 20px rgba(220, 53, 69, 0.2);
         }
 
-        .btn-submit:hover {
-            background: var(--danger-dark);
-            transform: translateY(-2px);
-            box-shadow: 0 15px 30px rgba(220, 53, 69, 0.3);
-        }
-
-        /* Footer Link */
-        .login-footer {
+        .form-footer {
+            margin-top: 30px;
             text-align: center;
-            margin-top: 2rem;
         }
 
-        .back-link {
+        .btn-back {
             text-decoration: none;
             color: var(--text-muted);
             font-size: 0.9rem;
-            font-weight: 500;
-            transition: 0.3s;
             display: inline-flex;
             align-items: center;
             gap: 8px;
+            transition: 0.3s;
         }
 
-        .back-link:hover {
+        .btn-back:hover {
             color: var(--primary);
         }
 
-        /* Animation */
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        .login-wrapper {
-            animation: fadeIn 0.6s ease-out;
+        /* Responsive */
+        @media (max-width: 992px) {
+            .login-side-visual { display: none; } /* ซ่อนฝั่งรูปบนจอเล็ก */
+            .login-side-form { flex: 1; padding: 0 15%; }
         }
     </style>
 </head>
 <body>
 
-    <div class="login-wrapper">
-        <div class="login-accent-bar"></div>
-        
-        <div class="login-body">
-            <div class="login-header">
-                <div class="admin-icon-container">
-                    <i class="fas fa-user-shield"></i>
-                </div>
-                <h1>Admin Access</h1>
-                <p>ระบบจัดการงานทะเบียนโรงเรียนบรรหารฯ 1</p>
+    <div class="full-page-login">
+        <div class="login-side-visual">
+            <div class="visual-content">
+                <i class="fas fa-user-shield"></i>
+                <h2>Admin Control Panel</h2>
+                <p>ระบบบริหารจัดการข้อมูลงานทะเบียนและวัดผล<br>โรงเรียนบรรหารแจ่มใสวิทยา 1</p>
+            </div>
+        </div>
+
+        <div class="login-side-form">
+            <div class="form-header">
+                <h1>เข้าสู่ระบบเจ้าหน้าที่</h1>
+                <p>กรุณาระบุ Username และ Password เพื่อดำเนินการต่อ</p>
             </div>
 
             <form action="#">
                 <div class="form-group">
-                    <label>ชื่อผู้ใช้งาน (Username)</label>
-                    <div class="input-group">
-                        <i class="fas fa-user-circle"></i>
-                        <input type="text" placeholder="ระบุ Username เจ้าหน้าที่" required autofocus>
+                    <label>ชื่อผู้ใช้งาน</label>
+                    <div class="input-box">
+                        <i class="fas fa-user"></i>
+                        <input type="text" placeholder="ระบุชื่อผู้ใช้งาน" required autofocus>
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label>รหัสผ่าน (Password)</label>
-                    <div class="input-group">
-                        <i class="fas fa-key"></i>
-                        <input type="password" placeholder="ระบุ Password" required>
+                    <label>รหัสผ่าน</label>
+                    <div class="input-box">
+                        <i class="fas fa-lock"></i>
+                        <input type="password" placeholder="ระบุรหัสผ่าน" required>
                     </div>
                 </div>
 
-                <div class="form-options">
-                    <label class="remember-me">
-                        <input type="checkbox"> จดจำการเข้าระบบ
-                    </label>
-                    <a href="#" class="forgot-pass">ลืมรหัสผ่าน?</a>
-                </div>
-
-                <button type="submit" class="btn-submit">
-                    เข้าสู่ระบบจัดการ <i class="fas fa-arrow-right-to-bracket"></i>
+                <button type="submit" class="btn-admin-login">
+                    ยืนยันการเข้าระบบ <i class="fas fa-arrow-right" style="margin-left: 10px;"></i>
                 </button>
             </form>
 
-            <div class="login-footer">
-                <a href="index.html" class="back-link">
-                    <i class="fas fa-chevron-left"></i> กลับสู่หน้าหลัก
+            <div class="form-footer">
+                <a href="index.html" class="btn-back">
+                    <i class="fas fa-chevron-left"></i> กลับสู่หน้าหลักสำหรับบุคคลทั่วไป
                 </a>
             </div>
         </div>
