--- a/index.html
+++ b/index.html
@@ -193,11 +193,11 @@
         </header>
 
         <section class="card-countdown">
-            <h2 style="font-weight: 600;">เปิดระบบบันทึกผลการเรียน 2/2568</h2>
+            <h2 style="font-weight: 600;">กำหนดการส่งเกรด (ก่อนกลางภาค/สอบกลางภาค) 2568/2</h2>
             <p style="opacity: 0.8;">เริ่มวันที่ 16 ธันวาคม 2568 เวลา 08:00 น.</p>
             <div id="timer" class="timer-grid">
                 <div class="timer-box"><span id="days" class="t-num">00</span><span>วัน</span></div>
-                <div class="timer-box"><span id="hours" class="t-num">00</span><span>ชม.</span></div>
+                <div class="timer-box"><span id="hours" class="t-num">00</span><span>ชั่วโมง</span></div>
                 <div class="timer-box"><span id="minutes" class="t-num">00</span><span>นาที</span></div>
                 <div class="timer-box"><span id="seconds" class="t-num">00</span><span>วินาที</span></div>
             </div>
