--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
         <section class="card-countdown">
             <h2 style="font-weight: 600;">กำหนดการส่งเกรด (ก่อนกลางภาค/สอบกลางภาค) 2568/2</h2>
-            <p style="opacity: 0.8;">เริ่มวันที่ 16 ธันวาคม 2568 เวลา 08:00 น.</p>
+            <p style="opacity: 0.8;">ไม่เกินเที่ยงคืนวันศุกร์ที่ 13 กุมภาพันธ์ พ.ศ. 2569</p>
             <div id="timer" class="timer-grid">
                 <div class="timer-box"><span id="days" class="t-num">00</span><span>วัน</span></div>
                 <div class="timer-box"><span id="hours" class="t-num">00</span><span>ชั่วโมง</span></div>
