--- a/person.html
+++ b/person.html
@@ -4,66 +4,91 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <title>Personnel Page</title>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <style>
+        body { font-family: 'Kanit', sans-serif; }
+        .glass-card {
+            background: rgba(255, 255, 255, 0.8);
+            backdrop-filter: blur(12px);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+        }
+        .profile-gradient {
+            background: linear-gradient(135deg, #6366f1 0%, #a855f7 100%);
+        }
+    </style>
 </head>
-<body class="bg-gray-50 p-10">
+<body class="bg-slate-50 min-h-screen py-16 px-4">
 
-    <div class="max-w-6xl mx-auto">
-        <h2 class="text-3xl font-bold text-center text-blue-900 mb-10">คณะผู้รับผิดชอบงานทะเบียนและวัดผล</h2>
-        
-        <div class="flex flex-wrap justify-center gap-8">
+    <div class="max-w-7xl mx-auto">
+        <div class="text-center mb-20">
+            <span class="text-indigo-600 font-semibold tracking-widest uppercase text-sm">Professional Team</span>
+            <h1 class="text-4xl md:text-5xl font-bold text-slate-800 mt-3">คณะบุคลากรงานทะเบียน</h1>
+            <div class="w-24 h-1.5 bg-indigo-600 mx-auto mt-6 rounded-full"></div>
+        </div>
+
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
             
-            <div class="w-full mb-4 flex justify-center">
-                <div class="bg-white p-6 rounded-2xl shadow-lg border-t-4 border-blue-600 w-80 text-center transform hover:scale-105 transition">
-                    <img src="https://via.placeholder.com/150" alt="Profile" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-gray-100">
-                    <h3 class="text-xl font-semibold">ชื่อ - นามสกุล</h3>
-                    <p class="text-blue-600 font-medium mb-4">หัวหน้างานทะเบียนและวัดผล</p>
-                    <div class="flex justify-center gap-4 text-gray-500">
-                        <a href="#"><i class="fas fa-envelope"></i></a>
-                        <a href="#"><i class="fas fa-phone"></i></a>
+            <div class="lg:col-span-3 flex justify-center mb-10">
+                <div class="glass-card group relative w-full max-w-md p-8 rounded-[2rem] shadow-2xl shadow-indigo-100 text-center transition-all duration-500 hover:-translate-y-2">
+                    <div class="absolute -top-12 left-1/2 -translate-x-1/2">
+                        <div class="w-32 h-32 rounded-3xl profile-gradient p-1 rotate-12 group-hover:rotate-0 transition-transform duration-500 shadow-xl">
+                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Felix" alt="leader" class="w-full h-full rounded-[1.4rem] bg-white object-cover">
+                        </div>
+                    </div>
+                    <div class="mt-20">
+                        <h3 class="text-2xl font-bold text-slate-800">ดร. สมชาย มุ่งมั่น</h3>
+                        <p class="text-indigo-600 font-medium mb-6 uppercase tracking-tight text-sm">หัวหน้างานทะเบียนและวัดผล</p>
+                        <div class="flex justify-center gap-3">
+                            <button class="w-10 h-10 rounded-xl bg-slate-100 text-slate-600 hover:bg-indigo-600 hover:text-white transition-colors"><i class="fa-solid fa-envelope"></i></button>
+                            <button class="w-10 h-10 rounded-xl bg-slate-100 text-slate-600 hover:bg-indigo-600 hover:text-white transition-colors"><i class="fa-solid fa-phone"></i></button>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <div class="bg-white p-6 rounded-2xl shadow-md w-64 text-center hover:shadow-xl transition">
-                <img src="https://via.placeholder.com/150" alt="Profile" class="w-24 h-24 rounded-full mx-auto mb-4 border-2 border-gray-100">
-                <h3 class="text-lg font-semibold">ชื่อ - นามสกุล</h3>
-                <p class="text-gray-600 text-sm mb-4">เจ้าหน้าที่งานทะเบียน</p>
-                <div class="flex justify-center gap-3 text-gray-400">
-                    <a href="#" class="hover:text-blue-500"><i class="fas fa-envelope"></i></a>
-                    <a href="#" class="hover:text-green-500"><i class="fas fa-phone"></i></a>
+            <div class="glass-card group p-6 rounded-[2rem] shadow-xl shadow-slate-200/50 text-center transition-all duration-300 hover:shadow-2xl hover:shadow-indigo-100">
+                <div class="w-24 h-24 mx-auto mb-6 relative">
+                    <div class="absolute inset-0 bg-indigo-200 rounded-2xl rotate-6 group-hover:rotate-12 transition-transform"></div>
+                    <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Aneka" class="relative w-full h-full rounded-2xl bg-white border border-slate-100 object-cover shadow-sm">
                 </div>
+                <h3 class="text-lg font-bold text-slate-800">น.ส. ใจดี รักษ์งาน</h3>
+                <p class="text-slate-500 text-sm mb-4">เจ้าหน้าที่งานทะเบียน</p>
+                <div class="h-[1px] w-12 bg-slate-200 mx-auto mb-4"></div>
+                <p class="text-xs text-slate-400"><i class="fa-solid fa-location-dot mr-1"></i> อาคาร 1 ห้อง 102</p>
             </div>
 
-            <div class="bg-white p-6 rounded-2xl shadow-md w-64 text-center hover:shadow-xl transition">
-                <img src="https://via.placeholder.com/150" alt="Profile" class="w-24 h-24 rounded-full mx-auto mb-4 border-2 border-gray-100">
-                <h3 class="text-lg font-semibold">ชื่อ - นามสกุล</h3>
-                <p class="text-gray-600 text-sm mb-4">เจ้าหน้าที่งานวัดผล</p>
-                <div class="flex justify-center gap-3 text-gray-400">
-                    <a href="#" class="hover:text-blue-500"><i class="fas fa-envelope"></i></a>
-                    <a href="#" class="hover:text-green-500"><i class="fas fa-phone"></i></a>
+            <div class="glass-card group p-6 rounded-[2rem] shadow-xl shadow-slate-200/50 text-center transition-all duration-300 hover:shadow-2xl hover:shadow-indigo-100">
+                <div class="w-24 h-24 mx-auto mb-6 relative">
+                    <div class="absolute inset-0 bg-purple-200 rounded-2xl rotate-6 group-hover:rotate-12 transition-transform"></div>
+                    <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Sincere" class="relative w-full h-full rounded-2xl bg-white border border-slate-100 object-cover shadow-sm">
                 </div>
+                <h3 class="text-lg font-bold text-slate-800">นาย วิชาการ แม่นยำ</h3>
+                <p class="text-slate-500 text-sm mb-4">เจ้าหน้าที่วัดผล</p>
+                <div class="h-[1px] w-12 bg-slate-200 mx-auto mb-4"></div>
+                <p class="text-xs text-slate-400"><i class="fa-solid fa-location-dot mr-1"></i> อาคาร 1 ห้อง 102</p>
             </div>
 
-            <div class="bg-white p-6 rounded-2xl shadow-md w-64 text-center hover:shadow-xl transition">
-                <img src="https://via.placeholder.com/150" alt="Profile" class="w-24 h-24 rounded-full mx-auto mb-4 border-2 border-gray-100">
-                <h3 class="text-lg font-semibold">ชื่อ - นามสกุล</h3>
-                <p class="text-gray-600 text-sm mb-4">เจ้าหน้าที่เทคโนโลยี</p>
-                <div class="flex justify-center gap-3 text-gray-400">
-                    <a href="#" class="hover:text-blue-500"><i class="fas fa-envelope"></i></a>
-                    <a href="#" class="hover:text-green-500"><i class="fas fa-phone"></i></a>
+            <div class="glass-card group p-6 rounded-[2rem] shadow-xl shadow-slate-200/50 text-center transition-all duration-300 hover:shadow-2xl hover:shadow-indigo-100">
+                <div class="w-24 h-24 mx-auto mb-6 relative">
+                    <div class="absolute inset-0 bg-blue-200 rounded-2xl rotate-6 group-hover:rotate-12 transition-transform"></div>
+                    <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Jack" class="relative w-full h-full rounded-2xl bg-white border border-slate-100 object-cover shadow-sm">
                 </div>
+                <h3 class="text-lg font-bold text-slate-800">นาย ไอที เก่งกาจ</h3>
+                <p class="text-slate-500 text-sm mb-4">นักจัดการข้อมูล</p>
+                <div class="h-[1px] w-12 bg-slate-200 mx-auto mb-4"></div>
+                <p class="text-xs text-slate-400"><i class="fa-solid fa-location-dot mr-1"></i> ศูนย์คอมพิวเตอร์</p>
             </div>
 
-            <div class="bg-white p-6 rounded-2xl shadow-md w-64 text-center hover:shadow-xl transition">
-                <img src="https://via.placeholder.com/150" alt="Profile" class="w-24 h-24 rounded-full mx-auto mb-4 border-2 border-gray-100">
-                <h3 class="text-lg font-semibold">ชื่อ - นามสกุล</h3>
-                <p class="text-gray-600 text-sm mb-4">เลขานุการ</p>
-                <div class="flex justify-center gap-3 text-gray-400">
-                    <a href="#" class="hover:text-blue-500"><i class="fas fa-envelope"></i></a>
-                    <a href="#" class="hover:text-green-500"><i class="fas fa-phone"></i></a>
+            <div class="glass-card group p-6 rounded-[2rem] shadow-xl shadow-slate-200/50 text-center transition-all duration-300 hover:shadow-2xl hover:shadow-indigo-100 md:col-start-2 lg:col-start-auto">
+                <div class="w-24 h-24 mx-auto mb-6 relative">
+                    <div class="absolute inset-0 bg-pink-200 rounded-2xl rotate-6 group-hover:rotate-12 transition-transform"></div>
+                    <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Molly" class="relative w-full h-full rounded-2xl bg-white border border-slate-100 object-cover shadow-sm">
                 </div>
+                <h3 class="text-lg font-bold text-slate-800">น.ส. ประสานงาน คล่องแคล่ว</h3>
+                <p class="text-slate-500 text-sm mb-4">เลขานุการงานทะเบียน</p>
+                <div class="h-[1px] w-12 bg-slate-200 mx-auto mb-4"></div>
+                <p class="text-xs text-slate-400"><i class="fa-solid fa-location-dot mr-1"></i> อาคาร 1 ห้องประชาสัมพันธ์</p>
             </div>
 
         </div>
