--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 </div>
                 <div class="stat-card">
                     <div class="stat-icon bg-grad-green"><i class="fas fa-chalkboard-teacher"></i></div>
-                    <div class="stat-info"><span class="stat-value">128</span><div class="stat-label">บุคลากร</div></div>
+                    <div class="stat-info"><span class="stat-value">128</span><div class="person.html">บุคลากร</div></div>
                 </div>
                 <div class="stat-card">
                     <div class="stat-icon bg-grad-orange"><i class="fas fa-user-graduate"></i></div>
