--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
             <p class="nav-label">Main Menu</p>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#" class="nav-link active"><i class="fas fa-th-large"></i> หน้าแรก</a></li>
-                <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-calendar-alt"></i> ปฏิทินวิชาการ</a></li>
-                <li class="nav-item"><a href="people.html" class="nav-link"><i class="fas fa-users"></i> บุคลากร</a></li>
+                <li class="nav-item"><a href="cender.html" class="nav-link"><i class="fas fa-calendar-alt"></i> ปฏิทินวิชาการ</a></li>
+                <li class="nav-item"><a href="person.html" class="nav-link"><i class="fas fa-users"></i> บุคลากร</a></li>
                 <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-phone"></i> ติดต่อสอบถาม</a></li>
             </ul>
         </nav>
