--- a/index.html
+++ b/index.html
@@ -56,14 +56,6 @@
         .nav-link:hover, .nav-link.active { background-color: var(--primary-light); color: var(--primary); }
         .nav-link.active { background-color: var(--primary); color: var(--white); }
 
-        /* Banner High-Impact Animation */
-        @keyframes tilt {
-            0%, 50%, 100% { transform: rotate(0deg); }
-            25% { transform: rotate(0.5deg); }
-            75% { transform: rotate(-0.5deg); }
-        }
-        .animate-tilt { animation: tilt 4s infinite linear; }
-
         /* Main Content */
         main { padding: 2rem; width: 100%; max-width: 1400px; margin: 0 auto; }
 
@@ -121,33 +113,30 @@
             </div>
         </header>
 
-        <div id="test-banner" class="mb-10 transition-all duration-700">
+        <div id="test-banner" class="mb-8 transition-all duration-500 ease-in-out">
             <div class="relative group">
-                <div class="absolute -inset-1 bg-gradient-to-r from-red-600 via-amber-500 to-red-600 rounded-[2.5rem] blur opacity-30 group-hover:opacity-60 animate-tilt"></div>
+                <div class="absolute -inset-0.5 bg-gradient-to-r from-amber-300 to-orange-300 rounded-[2rem] blur opacity-10 group-hover:opacity-20 transition duration-500"></div>
                 
-                <div class="relative flex flex-col md:flex-row items-center justify-between bg-slate-900 rounded-[2.5rem] p-6 md:p-8 shadow-2xl overflow-hidden">
-                    <div class="flex items-center gap-6 flex-1">
-                        <div class="relative">
-                            <div class="absolute inset-0 bg-red-500 rounded-2xl animate-ping opacity-20"></div>
-                            <div class="relative w-16 h-16 bg-gradient-to-br from-red-500 to-orange-600 rounded-2xl flex items-center justify-center text-white text-3xl shadow-xl">
-                                <i class="fa-solid fa-triangle-exclamation"></i>
-                            </div>
+                <div class="relative flex flex-col md:flex-row items-center justify-between bg-white border border-amber-100 rounded-[2rem] p-4 md:p-5 shadow-sm">
+                    <div class="flex items-center gap-4 flex-1">
+                        <div class="flex-shrink-0 w-12 h-12 bg-amber-50 text-amber-500 rounded-2xl flex items-center justify-center text-xl">
+                            <i class="fa-solid fa-circle-exclamation"></i>
                         </div>
 
                         <div class="flex flex-col">
-                            <div class="flex flex-wrap items-center gap-3">
-                                <h3 class="text-white font-extrabold text-2xl md:text-3xl tracking-tight">ประกาศ: ระบบทดสอบ</h3>
-                                <span class="px-3 py-1 bg-red-600 text-white text-[10px] font-black rounded-full animate-pulse border border-red-400">BETA TESTING</span>
+                            <div class="flex items-center gap-2">
+                                <span class="text-amber-900 font-bold text-base md:text-lg">อยู่ระหว่างการทดสอบระบบ</span>
+                                <span class="px-2 py-0.5 bg-amber-100 text-amber-700 text-[10px] font-bold rounded-md border border-amber-200 uppercase tracking-tighter">Beta Version</span>
                             </div>
-                            <p class="text-slate-400 text-sm md:text-lg mt-2 font-medium">
-                                ขณะนี้กำลังปรับปรุงข้อมูลภาคเรียนที่ 2/2568 <span class="text-amber-400 font-bold underline">ห้ามนำข้อมูลไปอ้างอิงจนกว่าจะประกาศเปิดใช้งานจริง</span>
+                            <p class="text-slate-500 text-sm mt-0.5">
+                                ขณะนี้กำลังปรับปรุงข้อมูลภาคเรียนที่ 2/2568 โปรดตรวจสอบความถูกต้องก่อนการอ้างอิง
                             </p>
                         </div>
                     </div>
 
-                    <div class="mt-6 md:mt-0">
-                        <button onclick="closeBanner()" class="px-8 py-3 bg-white/10 hover:bg-white text-white hover:text-slate-900 rounded-2xl font-black transition-all border border-white/20 shadow-xl flex items-center gap-2">
-                            ตกลง รับทราบ <i class="fa-solid fa-check-double"></i>
+                    <div class="flex items-center gap-3 mt-3 md:mt-0">
+                        <button onclick="closeBanner()" class="px-5 py-2 text-slate-400 hover:text-slate-600 hover:bg-slate-100 rounded-xl font-semibold text-sm transition-all">
+                            ปิดประกาศ
                         </button>
                     </div>
                 </div>
@@ -198,8 +187,8 @@
     function closeBanner() {
         const banner = document.getElementById('test-banner');
         banner.style.opacity = '0';
-        banner.style.transform = 'scale(0.9) translateY(-20px)';
-        setTimeout(() => { banner.style.display = 'none'; }, 600);
+        banner.style.transform = 'translateY(-10px)';
+        setTimeout(() => { banner.style.display = 'none'; }, 500);
     }
 
     // Countdown Logic
